Fixed horizontal scrolling again via css reset :(

--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -11,6 +11,8 @@
 
 .large-text {
   @include basic-text;
+  font-size: larger;
+
 }
 
 .centered-big-title {
