--- a/app/assets/stylesheets/_layouts.scss
+++ b/app/assets/stylesheets/_layouts.scss
@@ -189,8 +189,8 @@
    Recipe Display Components
    ====================== */
 .recipe-page {
-  @include display;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
 }
 .recipe-container {
   display: flex;
@@ -201,8 +201,10 @@
   border-radius: 2%;
   margin: 1rem;
 
+  aspect-ratio: 8.5 / 11;
+  width: 5rem;
   @media (min-width: 768px) {
-    width: 20rem;
+    width: 8rem;
   }
 }
 .ingredients-container {
