--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -9,7 +9,6 @@
 }
 
 @mixin basic-text() {
-    font-size: larger;
     text-decoration: none;
     color: $quaternary;
 
